--- a/mobile-gallery.html
+++ b/mobile-gallery.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="hero">
-      <a class="hero__back" href="mobile-home.html">← 首页</a>
+      <a class="hero__back" href="index.html">← 首页</a>
       <p class="hero__eyebrow">情绪加油站</p>
       <h1>一路同行的高光瞬间</h1>
       <p class="hero__subtitle">看见你坚持的样子，记住每一份支持。</p>
@@ -120,7 +120,7 @@
 
     <section class="cta-section">
       <p>记住这些瞬间，下一站是考场光芒。</p>
-      <a class="cta" href="mobile-home.html">回到首页继续冲刺</a>
+      <a class="cta" href="index.html">回到首页继续冲刺</a>
     </section>
 
     <footer class="footer">
