--- a/mobile-study.html
+++ b/mobile-study.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="topbar">
-      <a class="topbar__back" href="mobile-home.html" aria-label="返回首页"
+      <a class="topbar__back" href="index.html" aria-label="返回首页"
         >← 首页</a
       >
       <div class="topbar__title">
